Fix Focus problem with QX11EmbedWidget

Since QX11EmbedWidget can be included in another Qt application which
has QX11EmbedContainer, QX11EmbedWidget should be activated at first.

Task-number: QTBUG-3617
Change-Id: I23e12f6c3ed9f7bd4a3ac0d0237bf7382db14ee2
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>
(cherry picked from commit 4c7565056f94814d857f210cbda04919a88adc62)